# flux-backend

./: Dockerfile  docker-compose.yaml  pyproject.toml  test.py
flux_backend/: custom_logger.py  kafka_utils.py  main.py
flux_backend/api/: main_page.py  match_page.py  routers.py
flux_backend/init_scripts/: fill_tables.py
flux_backend/schemas/cs/: schemas.py
flux_backend/task_manager/: Dockerfile  celery_app.py  config.py  redis_app.py  tasks.py
flux_backend/utils/: utils.py
